# ironic-redfish

./: .testr.conf  .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ironic_redfish/: __init__.py  config.py  management.py  power.py  utils.py
ironic_redfish/tests/unit/: test_init.py  test_management.py  test_power.py  test_utils.py
tools/: pip_install.sh
