[metadata]
name = ironic-redfish
summary = Backport of the Redfish driver to OpenStack Ocata and Newton
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ironic_redfish

[entry_points]
ironic.drivers =
    pxe_redfish = ironic_redfish:PXERedfishDriver

[wheel]
universal = 1
